--- a/index.html
+++ b/index.html
@@ -12,18 +12,11 @@
         }
 
         body {
-            font-family: Arial, sans-serif;
-            height: 100vh;
-            background-color: #f5f5f5;
-        }
 
         .container {
             display: flex;
             flex-wrap: wrap;
             height: 100vh;
-            gap: 10px;
-            padding: 10px;
-        }
 
         .panel {
             flex: 1 1 500px;
@@ -41,19 +34,126 @@
             height: 100%;
             border: none;
         }
+
+        .tab-bar {
+            display: none;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                overflow: hidden;
+            }
+
+            .container {
+                position: relative;
+                height: 100vh;
+                padding: 0;
+                gap: 0;
+            }
+
+            .panel {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                height: calc(100vh - 80px);
+                transform: translateY(100%);
+                transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+                z-index: 10;
+                border-radius: 20px 20px 0 0;
+                min-height: none;
+                max-height: none;
+            }
+
+            .panel:target {
+                transform: translateY(0);
+                z-index: 20;
+            }
+
+            .tab-bar {
+                display: flex;
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                background: #fff;
+                border-top: 2px solid #ddd;
+                z-index: 100;
+                box-shadow: 0 -4px 20px rgba(0,0,0,0.1);
+            }
+
+            .tab-btn {
+                flex: 1;
+                padding: 15px 10px;
+                text-align: center;
+                text-decoration: none;
+                color: #666;
+                font-weight: 600;
+                font-size: 14px;
+                background: #fff;
+                border: none;
+                transition: all 0.2s ease;
+                position: relative;
+            }
+
+            .tab-btn:hover {
+                background: #f8f9fa;
+                color: #333;
+            }
+
+            .tab-btn.active {
+                color: #007bff;
+                background: #e3f2fd;
+            }
+
+            .tab-btn.active::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 40px;
+                height: 3px;
+                background: #007bff;
+                border-radius: 0 0 3px 3px;
+            }
+
+            .close-overlay {
+                display: none;
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
+                height: calc(100vh - 80px);
+                background: rgba(0,0,0,0.3);
+                z-index: 5;
+            }
+
+            .panel:target ~ .close-overlay {
+                display: block;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="panel">
+        <div class="panel" id="tab1">
             <iframe src="https://ryyst.github.io/sws" title="Sää"></iframe>
         </div>
-        <div class="panel">
+        <div class="panel" id="tab2">
             <iframe src="https://uimahalli.salo.fyi" title="Uimahalli"></iframe>
         </div>
-        <div class="panel">
+        <div class="panel" id="tab3">
             <iframe src="https://kirjasto.salo.fyi" title="Kirjasto"></iframe>
         </div>
+        <div class="close-overlay"></div>
+    </div>
+
+    <div class="tab-bar">
+        <a href="#tab1" class="tab-btn">🌤️ Sää</a>
+        <a href="#tab2" class="tab-btn">🏊 Uimahalli</a>
+        <a href="#tab3" class="tab-btn">📚 Kirjasto</a>
+        <a href="#" class="tab-btn">✕</a>
     </div>
 </body>
 </html>
