--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
         }
 
         body {
+            font-family: Arial, sans-serif;
+            height: 100vh;
+            background-color: #f5f5f5;
+        }
 
         .container {
             display: flex;
             flex-wrap: wrap;
             height: 100vh;
+            gap: 10px;
+            padding: 10px;
+        }
 
         .panel {
             flex: 1 1 500px;
@@ -56,18 +63,20 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-                height: calc(100vh - 80px);
-                transform: translateY(100%);
+                height: 100vh; // calc(100vh - 80px);
                 transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+                top: translateY(100vh);
                 z-index: 10;
                 border-radius: 20px 20px 0 0;
                 min-height: none;
                 max-height: none;
+                visibility: hidden;
             }
 
             .panel:target {
-                transform: translateY(0);
+                transform: translateY(0vh);
                 z-index: 20;
+                visibility: visible;
             }
 
             .tab-bar {
@@ -155,5 +164,24 @@
         <a href="#tab3" class="tab-btn">📚 Kirjasto</a>
         <a href="#" class="tab-btn">✕</a>
     </div>
+
+    <script>
+        // Update active tab state
+        function updateActiveTab() {
+            const hash = window.location.hash;
+            const tabs = document.querySelectorAll('.tab-btn');
+
+            tabs.forEach(tab => {
+                tab.classList.remove('active');
+                if (tab.getAttribute('href') === hash && hash !== '#') {
+                    tab.classList.add('active');
+                }
+            });
+        }
+
+        // Listen for hash changes
+        window.addEventListener('hashchange', updateActiveTab);
+        window.addEventListener('load', updateActiveTab);
+    </script>
 </body>
 </html>
