--- a/index.html
+++ b/index.html
@@ -143,12 +143,16 @@
         <div class="panel" id="tab3">
             <iframe src="https://kirjasto.salo.fyi" title="Kirjasto"></iframe>
         </div>
+        <div class="panel" id="tab4">
+            <iframe src="https://tapahtumat.salo.fyi" title="Tapahtumat"></iframe>
+        </div>
     </div>
 
     <div class="tab-bar">
         <a href="#tab1" class="tab-btn">🌤️ Sää</a>
         <a href="#tab2" class="tab-btn">🏊 Uimahalli</a>
         <a href="#tab3" class="tab-btn">📚 Kirjasto</a>
+        <a href="#tab4" class="tab-btn">🎉 Tapahtumat</a>
         <a href="#" class="tab-btn" style="max-width: 64px">✕</a>
     </div>
 
