Frantic rhinoceros hornbill

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                 border: none;
                 transition: all 0.2s ease;
                 position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             .tab-btn:hover {
