--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                 border-top: 2px solid #ddd;
                 z-index: 100;
                 box-shadow: 0 -4px 20px rgba(0,0,0,0.1);
+                max-height: 47px;
             }
 
             .tab-btn {
