--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
     <title>Dashboard</title>
     <style>
         * {
@@ -17,6 +17,10 @@
             height: 100dvh; /* Dynamic viewport height for mobile */
             background-color: #595959;
             overscroll-behavior: none; /* Disable pull-to-refresh */
+            position: fixed;
+            width: 100%;
+            overflow: hidden;
+            -webkit-overflow-scrolling: touch;
         }
 
         .container {
@@ -52,6 +56,11 @@
         @media (max-width: 768px) {
             body {
                 overflow: hidden;
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
             }
 
             .container {
