Stupid american bison

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <body>
     <div class="container">
         <div class="panel" id="saa">
-            <iframe src="https://ryyst.github.io/sws" title="Sää"></iframe>
+            <iframe src="https://saa.salo.fyi" title="Sää"></iframe>
         </div>
         <div class="panel" id="uimahalli">
             <iframe src="https://uimahalli.salo.fyi" title="Uimahalli"></iframe>
