--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
     </div>
 
     <script>
+        console.log('Version: 1757242938'); // auto-update
+
         function showTab(targetId) {
             // Hide all panels
             document.querySelectorAll('.panel').forEach(panel => {
@@ -236,6 +238,20 @@
                 navigator.serviceWorker.register('/sw.js')
                     .then((registration) => {
                         console.log('SW registered: ', registration);
+
+                        // Force update check and immediate activation
+                        registration.addEventListener('updatefound', () => {
+                            const newWorker = registration.installing;
+                            newWorker.addEventListener('statechange', () => {
+                                if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+                                    // New SW is available, reload to activate it
+                                    window.location.reload();
+                                }
+                            });
+                        });
+
+                        // Check for updates immediately
+                        registration.update();
                     })
                     .catch((registrationError) => {
                         console.log('SW registration failed: ', registrationError);
