--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
         <div class="panel" id="uimahalli">
             <iframe src="https://uimahalli.salo.fyi" title="Uimahalli"></iframe>
         </div>
-        <div class="panel" id="kirjasto">
-            <iframe src="https://kirjasto.salo.fyi" title="Kirjasto"></iframe>
+        <div class="panel" id="auki">
+            <iframe src="https://kirjasto.salo.fyi" title="Auki"></iframe>
         </div>
         <div class="panel" id="tapahtumat">
             <iframe src="https://tapahtumat.salo.fyi" title="Tapahtumat"></iframe>
@@ -178,12 +178,12 @@
     <div class="tab-bar">
         <a href="#saa" class="tab-btn active">🌤️ Sää</a>
         <a href="#uimahalli" class="tab-btn">🏊 Uimahalli</a>
-        <a href="#kirjasto" class="tab-btn">📚 Kirjasto</a>
+        <a href="#auki" class="tab-btn">🕒 Auki</a>
         <a href="#tapahtumat" class="tab-btn">🎉 Tapahtumat</a>
     </div>
 
     <script>
-        const VERSION = "1757244883"
+        const VERSION = "1757277112"
         console.log('Version:', VERSION);
 
         function showTab(targetId) {
